<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="6"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/account_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/account_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/account_selector"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"/>

    <TextView
        android:id="@+id/expense_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/expense_type_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/expense_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1">

        <RadioButton
            android:id="@+id/expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/expense_text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#004D40"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#004D40"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/income"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/income_text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/amount_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/amount_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/date_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <DatePicker
        android:id="@+id/date_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:theme="@style/MyActivityTheme"/>

    <Button
        android:id="@+id/submit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:background="#FF4081"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</GridLayout>
