<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:rowCount="6">



    <TableLayout
        android:id="@+id/logs_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/logs_table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF4081">

            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/date_text"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/label_acount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Account No."
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/label_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/expense_type_text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/label_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/amount_text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginTop="30dp"
        android:text="@string/balance_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</GridLayout>